--- a/spring-base/pom.xml
+++ b/spring-base/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-base</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>01-ioc-container-overview</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
